--- a/scss/style.scss
+++ b/scss/style.scss
@@ -95,7 +95,7 @@ nav a:hover {
 }
 
 .btn{
-    background-color: white;
+    background-color: #78B078;
 }
 
 
@@ -208,6 +208,7 @@ footer {
 
 h1 {
     background-color: #91B57B;
+    text-align: center;
     
 
 }
